@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2012 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.993.2.209 2012/02/23 11:26:35 des Exp $
+# $Id: CHANGES,v 1.993.2.210 2012/03/05 09:47:47 mg Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,7 @@
 # --
 
 2.4.13 (????/??/??)
+ - 2012-03-05 Fixed bug#7545 - AgentTicketBounce lacks permission checks.
  - 2012-02-23 Fixed bug#8227 - LDAP user syncronisation doesn't work.
  - 2011-12-09 Fixed bug#7997 - Fetching mail via AdminMailAccount does not work.
  - 2011-12-02 Fixed bug#5086 - Emails with a long subject are not handled.
